# moshaere

./: .gitignore  .python-version  README.md  docker-compose.yml  main.py  pyproject.toml
database/: database.py
models/: poems.py
schema/: session.py
src/database/: __init__.py
src/models/: poems.py
src/routers/: poems.py  sessions.py
src/rulesets/: base.py  validations.py
src/schema/: poems.py  session.py
