[tool.poetry]
name = "moshaere"
version = "0.1.0"
description = ""
authors = ["Mohammadreza Varasteh <varastehmr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.7"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
